# ghostwriters

./: .gitattributes  .gitignore  Poznámky z callů  README.md  SPRINT.md  nss_texts_simsim.csv  subset.csv
.Rproj.user/5227CCAB/sources/prop/: E6A79D3C
.Rproj.user/5227CCAB/sources/session-895ca7e2/: 99E36BDA  99E36BDA-contents
.Rproj.user/shared/notebooks/0B16B605-Ghostwriters/1/5227CCAB895ca7e2/: chunks.json
.Rproj.user/shared/notebooks/0B16B605-Ghostwriters/1/5227CCAB895ca7e2/c0tdb0yrrcqvk/: 000011.csv
.Rproj.user/shared/notebooks/0B16B605-Ghostwriters/1/5227CCAB895ca7e2/c511i11u89zte/: 00000f.csv
.Rproj.user/shared/notebooks/0B16B605-Ghostwriters/1/5227CCAB895ca7e2/c6oqa42ls9p1s/: 000013.csv
.Rproj.user/shared/notebooks/0B16B605-Ghostwriters/1/5227CCAB895ca7e2/c7cuyzljqd3ik/: 00000f.csv
.Rproj.user/shared/notebooks/0B16B605-Ghostwriters/1/5227CCAB895ca7e2/cdaet0aos7qh3/: 000013.csv
.Rproj.user/shared/notebooks/0B16B605-Ghostwriters/1/5227CCAB895ca7e2/cfzukzivmvdbz/: 00000f.csv  000010.snapshot
.Rproj.user/shared/notebooks/0B16B605-Ghostwriters/1/5227CCAB895ca7e2/cghkn6v2zhj1k/: 00000f.csv
Poznámky/: zapis_milan.txt
experiment_01/: README.md  methodology_and_results.md  pyproject.toml
experiment_01/outputs/: confusion_matrices.json  results_summary.txt
experiment_01/scripts/: run_baseline.py
experiment_01/src/fingerprint/: __init__.py  classifiers.py  data_loader.py  evaluation.py  preprocessing.py
experiment_01/src/fingerprint/features/: function_words.py  ngrams.py  surface.py
(+3 files in other folders)
