[tool.poetry]
name = "experiment-01"
version = "0.1.0"
description = "Authorship fingerprinting for Czech Constitutional Court dissenting opinions"
authors = ["Petr Hrebenar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^3.0.0"
numpy = "^2.4.2"
scikit-learn = "^1.8.0"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
ufal-udpipe = "^1.4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
